fix : carousel animation and overflow

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,6 @@ nav {
 .login {
   align-self: center;
   padding: 10px;
-
   border: solid 1px black;
   font-weight: 700;
   float: right;
@@ -96,7 +95,6 @@ nav {
 
 .logo-container {
   margin: 22px;
-  margin-right: 10px;
 }
 
 /*navbar ending , header start*/
@@ -106,21 +104,20 @@ nav {
 }
 
 .body-container {
-  max-width: 1430px;
+  max-width: 1630px;
   margin: 0 auto;
 }
 
 .clockimg {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .header {
   position: relative;
   display: flex;
-  max-width: 1430px;
-  margin: 0 auto 4.8rem;
+  max-width: 1630px;
+  margin: 0 auto 1rem;
 }
 
 .header-text {
@@ -145,13 +142,23 @@ nav {
 }
 
 /* header end footer(Courses) start*/
+.learning-tab {
+  max-width: 1550px;
+  margin: 0 auto;
+}
 
 .footer-title {
-  padding: 30px;
+  padding: 30px 30px 0 30px;
+}
+
+.footer-description {
+  font-weight: 300;
+  line-height: 1.4;
+  font-size: 1.9rem;
 }
 
 .learning-fields {
-  padding: 30px;
+  padding-left: 20px;
 }
 
 .field-list {
@@ -165,6 +172,7 @@ nav {
 .field-list > .nav-item {
   color: #6a6f73;
   font-weight: bold;
+  font-size: 20px;
 }
 
 li:hover {
@@ -182,11 +190,14 @@ li:hover {
 }
 
 .field-description {
-  overflow: hidden;
-  width: 100%px;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  margin-bottom: 1.6rem;
+  max-width: 65%;
 }
 
 .explore-python {
@@ -203,9 +214,8 @@ li:hover {
 }
 
 .course {
-  margin-top: 15px;
+  margin: 15px 15px 0 0;
   width: 240px;
-  margin-right: 15px;
 }
 
 .hidden-course {
@@ -318,8 +328,7 @@ ul.categories-list {
 
   .smaller-clock {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     max-width: 100%;
   }
 
@@ -374,6 +383,26 @@ ul.categories-list {
   .teach {
     display: none;
   }
+
+  .carousel-container {
+    width: 250px;
+  }
+}
+
+.carousel-container {
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 1124px) {
+  .business {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 988px) {
+  .teach {
+    display: none;
+  }
 }
 
 .carousel-control-prev-icon,
@@ -423,35 +452,12 @@ ul.categories-list {
 .active > div:first-child {
   display: block;
 }
-@media (max-width: 767px) {
-  .carousel-inner .active.left {
-    left: -50%;
-  }
-  .carousel-inner .active.right {
-    left: 50%;
-  }
-  .carousel-inner .next {
-    left: 50%;
-  }
-  .carousel-inner .prev {
-    left: -50%;
-  }
-  .carousel-col {
-    width: 50%;
-  }
-  .active > div:first-child + div {
-    display: block;
-  }
-}
-*/ .active > div {
+
+.active > div {
   display: none;
 }
 
-.active > div:first-child {
-  display: block;
-}
-
-@media (max-width: 992px) {
+@media (max-width: 1409px) {
   .carousel-inner .carousel-item > div {
     display: none;
   }
@@ -467,28 +473,19 @@ ul.categories-list {
 }
 
 @media (min-width: 900px) and (max-width: 1409px) {
-  .carousel-inner .active.left {
-    /* left: -33%; */
-    transform: translateX(-20%);
-  }
-
-  .carousel-inner .active.right {
-    /* left: 33%; */
-    transform: translateX(20%);
-  }
-
-  .carousel-inner .next {
-    /* left: 33%; */
-    transform: translateX(20%);
-  }
-
-  .carousel-inner .prev {
-    /* left: -33%; */
-    transform: translateX(-20%);
+  .carousel-container {
+    width: 750px;
   }
 
   .carousel-col {
     width: 33%;
+  }
+
+  .carousel-inner .carousel-item > div:first-child + div {
+    display: block;
+  }
+  .carousel-inner .carousel-item > div:first-child + div + div {
+    display: block;
   }
 
   .active > div:first-child + div {
@@ -499,6 +496,14 @@ ul.categories-list {
     display: block;
   }
 
+  .active > div:first-child + div + div + div {
+    display: none;
+  }
+
+  .active > div:first-child + div + div + div + div {
+    display: none;
+  }
+
   .carousel-control-next,
   .carousel-control-prev {
     height: 170px;
@@ -506,23 +511,23 @@ ul.categories-list {
 }
 
 @media (min-width: 1410px) {
+  .carousel-container {
+    width: 1250px;
+  }
+
   .carousel-inner .active.left {
-    /* left: -20%; */
     transform: translateX(-20%);
   }
 
   .carousel-inner .active.right {
-    /* left: 20%; */
     transform: translateX(20%);
   }
 
   .carousel-inner .next {
-    /* left: 20%; */
     transform: translateX(20%);
   }
 
   .carousel-inner .prev {
-    /* left: -20%; */
     transform: translateX(-20%);
   }
 
@@ -569,4 +574,9 @@ ul.categories-list {
 
 .nav {
   --bs-nav-link-hover-color: black;
+}
+
+.div1 {
+  font-size: xx-large;
+  color: red;
 }
